...
                    MainView(categories: self.categories, categoryToEdit: $categoryToEdit, activeSheet: $activeSheet)
                } else {
                    // Shows info text, if no categories are created
                    EmptyView()
                }
            }
            .navigationTitle("Kategorien")
            .navigationBarItems(trailing: Button(action: {
                activeSheet = .first
            }, label: {
                Image(systemName: "plus")
            }))
            .sheet(item: $activeSheet) { item in
                switch item {
                case .first:
                    // Calls sheet for creating a category
                    CategoryCreation()
...
